--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".HelpActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ResultActivity"
             android:exported="false" />
 
